@@ -3,6 +3,7 @@ Changes for 3.4.8rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
 ....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)
 ..F....... [ZBX-13428] fixed long name of map outside go back button in map widget (agriscenko, Sasha)
 A.F....... [ZBX-12754] fixed undefined index error in map import (gcalenko)
